# rules_mjml

./: .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  release-please-config.json
.bcr/: metadata.template.json
.github/: release-please-config.json  renovate.json
.github/workflows/: ci.yml  release.yml
distro/: BUILD.bazel
e2e/: BUILD.bazel  MODULE.bazel  test-expected.html
examples/absolute/: BUILD.bazel
examples/include/: BUILD.bazel  main.mjml  styles-inline.css  styles.css
examples/main/: BUILD.bazel  other.mjml
examples/simple/: BUILD.bazel
mjml/: BUILD.bazel  defs.bzl
mjml/private/: BUILD.bazel  mjml.bzl  mjml_library.bzl
mjml/toolchain/: BUILD.bazel
