"""Bazel rules for MJML."""

module(name = "rules_mjml", version = "0.2.3")

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "aspect_rules_js", version = "1.42.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_nodejs", version = "6.2.0")

bazel_dep(name = "rules_pkg", version = "0.10.1", dev_dependency = True)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version_from_nvmrc = "//:.nvmrc")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "mjml_toolchain",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "mjml_toolchain")
