"""Bazel rules for MJML."""

module(name = "rules_mjml", version = "0.2.5")

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "aspect_rules_js", version = "2.8.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_nodejs", version = "6.6.2")

bazel_dep(name = "rules_pkg", version = "1.1.0", dev_dependency = True)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain()

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "mjml_toolchain",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "mjml_toolchain")
