load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_applicable_licenses = ["//:license"])

pkg_tar(
    name = "rules_mjml",
    srcs = [
        "//:distro",
        "//e2e:distro",
        "//mjml:distro",
        "//mjml/private:distro",
        "//mjml/toolchain:distro",
    ],
    extension = "tar.gz",
    # It is all source code, so make it read-only.
    mode = "0444",
    # Make it owned by root so it does not have the uid of the CI robot.
    owner = "0.0",
    package_dir = ".",
    strip_prefix = ".",
)
