load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_mjml//mjml:defs.bzl", "mjml_binary")

mjml_binary(
    name = "simple",
    srcs = ["simple.mjml"],
)

diff_test(
    name = "simple_test",
    file1 = ":simple",
    file2 = "simple-expected.html",
)

filegroup(
    name = "distro",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "MODULE.bazel.lock",
        "simple.mjml",
        "simple-expected.html",
    ],
    visibility = ["//distro:__pkg__"],
)
